fix: add tailwindcss/forms plugin configuration to not break the CSS entirely

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @import 'tailwindcss';
 
-@plugin '@tailwindcss/forms'
+@plugin '@tailwindcss/forms' {
+}
 
   /*
     The default border color has changed to `currentcolor` in Tailwind CSS v4,
